--- a/pipeline.yml
+++ b/pipeline.yml
@@ -4,7 +4,7 @@ resources:
   type: git
   source:
     uri: git@github.com:pivotal-customer0/pcf-gcp.git
-    branch: master
+    branch: mglynn-dev
     private_key: {{githubsshkey}}
 
 - name: pcf-gcp-concourse
