--- a/pipeline.yml
+++ b/pipeline.yml
@@ -33,6 +33,8 @@ jobs:
   - aggregate:
     - get: pcf-gcp-concourse
       trigger: false
+    - get: gcp-run-id
+      params: {bump: major}
   - task: wipe-env
     config:
       platform: linux
@@ -49,6 +51,8 @@ jobs:
         gcp_svc_acct_key: {{gcp_svc_acct_key}}
         gcp_terraform_prefix: {{gcp_terraform_prefix}}
         arg_wipe: {{arg_wipe}}
+  - put: gcp-run-id
+    params: {file: gcp-run-id/number}
 
 - name: Terraform-IaaS-1
   serial: true
@@ -58,6 +62,9 @@ jobs:
   - aggregate:
     - get: pcf-gcp-concourse
       trigger: false
+    - get: gcp-run-id
+      trigger: true
+      passed: [WipeEnv-0]
   - task: terrafrom-iaas
     config:
       platform: linux
@@ -78,7 +85,7 @@ jobs:
         gcp_terraform_subnet_pcf_zone1: {{gcp_terraform_subnet_pcf_zone1}}
         gcp_terraform_subnet_pcf_zone2: {{gcp_terraform_subnet_pcf_zone2}}
 
-- name: Deploy-Bosh
+- name: Deploy-Bosh-2
   serial: true
   max_in_flight: 1
   serial_groups: [full]
@@ -86,6 +93,9 @@ jobs:
   - aggregate:
     - get: pcf-gcp-concourse
       trigger: false
+    - get: gcp-run-id
+      trigger: false
+      passed: [Terraform-IaaS-1]
   - task: deploy-bosh
     config:
       platform: linux
