UPDATE: deploy-bosh.sh add tags for <<gcp_terraform_prefix>>-instance so we can wipe stuff more easily

--- a/manifests/bosh-init.template
+++ b/manifests/bosh-init.template
@@ -46,6 +46,7 @@ networks:
         tags:
           - nat-traverse
           - no-ip
+          - <<gcp_terraform_prefix>>-instance
 
 jobs:
   - name: bosh
