UPDATE: wipe_env.sh && pcf.tf  test-full-run

--- a/manifests/bosh-init.template
+++ b/manifests/bosh-init.template
@@ -119,7 +119,7 @@ jobs:
         provider: local
         local:
           users:
-          - {name: admin, password: admin}
+          - {name: <<bosh_director_user>>, password: <<bosh_director_password>>}
           - {name: hm, password: hm-password}
 
       hm:
