--- a/manifests/cloud-config.template
+++ b/manifests/cloud-config.template
@@ -66,81 +66,69 @@ networks:
   - range: <<gcp_terraform_subnet_bosh>>
     gateway: <<gcp_terraform_subnet_bosh_gateway>>
     az: z1
-    static:
-    - 10.0.0.4
-    - 10.0.0.10
-    reserved:
-    - 10.0.0.1-10.0.0.2
-    - 10.0.0.60-10.0.0.63
-    dns: [169.254.169.254, 8.8.8.8]
+    static: <<bosh_subnet_static>>
+    reserved: <<bosh_subnet_reserved>>
+    dns: <<bosh_subnet_DNS>>
     cloud_properties:
       network_name: <<gcp_terraform_prefix>>-vnet
-      subnetwork_name: <<gcp_terraform_prefix>>-subnet-bosh-us-east1
+      subnetwork_name: <<gcp_terraform_prefix>>-subnet-bosh-<<gcp_region>>
       tags:
+      - <<gcp_terraform_prefix>>-instance
       - nat-traverse
       - no-ip
 - name: concourse
   type: manual
   subnets:
-  - range: 10.0.0.64/26
-    gateway: 10.0.0.65
+  - range: <<gcp_terraform_subnet_concourse>>
+    gateway: <<gcp_terraform_subnet_concourse_gateway>>
     az: z1
-    static:
-    - 10.0.0.72
-    - 10.0.0.73
-    - 10.0.0.74
-    - 10.0.0.75
-    reserved:
-    - 10.0.0.65-10.0.0.70
-    - 10.0.0.122-10.0.0.127
-    dns: [169.254.169.254, 8.8.8.8]
+    static: <<concourse_subnet_static>>
+    reserved: <<concourse_subnet_reserved>>
+    dns: <<concourse_subnet_DNS>>
     cloud_properties:
       network_name: <<gcp_terraform_prefix>>-vnet
-      subnetwork_name: <<gcp_terraform_prefix>>-subnet-concourse-us-east1-c
+      subnetwork_name: <<gcp_terraform_prefix>>-subnet-concourse-<<gcp_zone_1>>
       tags:
+      - <<gcp_terraform_prefix>>-instance
       - nat-traverse
       - no-ip
 - name: pcf-z1
   type: manual
   subnets:
-  - range: 10.0.4.0/22
-    gateway: 10.0.4.1
+  - range: <<gcp_terraform_subnet_pcf_zone1>>
+    gateway: <<gcp_terraform_subnet_pcf_zone1_gateway>>
     az: z1
-    static:
-    - 10.0.4.6-10.0.4.11
-    reserved:
-    - 10.0.4.1-10.0.4.5
-    - 10.0.7.250-10.0.7.255
-    dns: [169.254.169.254, 8.8.8.8]
+    static: <<pcf_subnet_zone1_static>>
+    reserved: <<pcf_subnet_zone1_reserved>>
+    dns: <<pcf_subnet_zone1_DNS>>
     cloud_properties:
       network_name: <<gcp_terraform_prefix>>-vnet
-      subnetwork_name: <<gcp_terraform_prefix>>-subnet-pcf-us-east1-c
+      subnetwork_name: <<gcp_terraform_prefix>>-subnet-pcf-<<gcp_zone_1>>
       tags:
+      - <<gcp_terraform_prefix>>-instance
       - nat-traverse
       - no-ip
 - name: pcf-z2
   type: manual
   subnets:
-  - range: 10.0.8.0/22
-    gateway: 10.0.8.1
+  - range: <<gcp_terraform_subnet_pcf_zone2>>
+    gateway: <<gcp_terraform_subnet_pcf_zone2_gateway>>
     az: z2
-    static:
-    - 10.0.8.6-10.0.8.11
-    reserved:
-    - 10.0.8.1-10.0.8.5
-    - 10.0.11.250-10.0.11.255
-    dns: [169.254.169.254, 8.8.8.8]
+    static: <<pcf_subnet_zone2_static>>
+    reserved: <<pcf_subnet_zone2_reserved>>
+    dns: <<pcf_subnet_zone2_DNS>>
     cloud_properties:
       network_name: <<gcp_terraform_prefix>>-vnet
-      subnetwork_name: <<gcp_terraform_prefix>>-subnet-pcf-us-east1-d
+      subnetwork_name: <<gcp_terraform_prefix>>-subnet-pcf-<<gcp_zone_2>>
       tags:
+      - <<gcp_terraform_prefix>>-instance
       - nat-traverse
       - no-ip
 - name: public
   type: vip
 
 compilation:
-  workers: 5
+  workers: 6
   reuse_compilation_vms: true
   az: z1
   vm_type: medium
