--- a/pipeline.yml
+++ b/pipeline.yml
@@ -94,7 +94,7 @@ jobs:
     - get: pcf-gcp-concourse
       trigger: false
     - get: gcp-run-id
-      trigger: true
+      trigger: false
       passed: [Terraform-IaaS-1]
   - task: deploy-bosh
     config:
@@ -112,11 +112,52 @@ jobs:
         gcp_svc_acct_key: {{gcp_svc_acct_key}}
         gcp_terraform_prefix: {{gcp_terraform_prefix}}
         gcp_terraform_subnet_bosh: {{gcp_terraform_subnet_bosh}}
-        gcp_terraform_subnet_bosh_gateway: {{gcp_terraform_subnet_bosh_gateway}}
         gcp_terraform_subnet_bosh_static: {{gcp_terraform_subnet_bosh_static}}
+        gcp_terraform_subnet_bosh_gateway: {{gcp_terraform_subnet_bosh_gateway}}
+        gcp_terraform_subnet_concourse: {{gcp_terraform_subnet_concourse}}
+        gcp_terraform_subnet_concourse_gateway: {{gcp_terraform_subnet_concourse_gateway}}
+        gcp_terraform_subnet_pcf_zone1: {{gcp_terraform_subnet_pcf_zone1}}
+        gcp_terraform_subnet_pcf_zone1_gateway: {{gcp_terraform_subnet_pcf_zone1_gateway}}
+        gcp_terraform_subnet_pcf_zone2: {{gcp_terraform_subnet_pcf_zone2}}
+        gcp_terraform_subnet_pcf_zone2_gateway: {{gcp_terraform_subnet_pcf_zone2_gateway}}
         bosh_manifest_template: {{bosh_manifest_template}}
+        bosh_cloud_config_temaplate: {{bosh_cloud_config_temaplate}}
         bosh_director_user: {{bosh_director_user}}
         bosh_director_password: {{bosh_director_password}}
+        bosh_subnet_static:
+        - {{bosh_subnet_static_range_1}}
+        - {{bosh_subnet_static_range_2}}
+        bosh_subnet_reserved:
+        - {{bosh_subnet_reserved_range_1}}
+        - {{bosh_subnet_reserved_range_2}}
+        bosh_subnet_DNS:
+        - {{bosh_subnet_DNS_range_1}}
+        - {{bosh_subnet_DNS_range_2}}
+        concourse_subnet_static:
+        - {{concourse_subnet_static_range_1}}
+        - {{concourse_subnet_static_range_2}}
+        concourse_subnet_reserved:
+        - {{concourse_subnet_reserved_range_1}}
+        - {{concourse_subnet_reserved_range_2}}
+        concourse_subnet_DNS:
+        - {{concourse_subnet_DNS_range_1}}
+        - {{concourse_subnet_DNS_range_2}}
+        pcf_subnet_zone1_static:
+        - {{pcf_subnet_zone1_static_range_1}}
+        pcf_subnet_zone1_reserved:
+        - {{pcf_subnet_zone1_reserved_range_1}}
+        - {{pcf_subnet_zone1_reserved_range_2}}
+        pcf_subnet_zone1_DNS:
+        - {{pcf_subnet_zone1_DNS_range_1}}
+        - {{pcf_subnet_zone1_DNS_range_2}}
+        pcf_subnet_zone2_static:
+        - {{pcf_subnet_zone2_static_range_1}}
+        pcf_subnet_zone2_reserved:
+        - {{pcf_subnet_zone2_reserved_range_1}}
+        - {{pcf_subnet_zone2_reserved_range_2}}
+        pcf_subnet_zone2_DNS:
+        - {{pcf_subnet_zone2_DNS_range_1}}
+        - {{pcf_subnet_zone2_DNS_range_2}}
 
 - name: Deploy-Concourse-3
   serial: true
@@ -144,10 +185,10 @@ jobs:
         gcp_zone_2: {{gcp_zone_2}}
         gcp_svc_acct_key: {{gcp_svc_acct_key}}
         gcp_terraform_prefix: {{gcp_terraform_prefix}}
+        gcp_terraform_subnet_bosh: {{gcp_terraform_subnet_bosh}}
         gcp_terraform_subnet_bosh_static: {{gcp_terraform_subnet_bosh_static}}
         gcp_terraform_subnet_bosh_gateway: {{gcp_terraform_subnet_bosh_gateway}}
+        gcp_terraform_subnet_concourse: {{gcp_terraform_subnet_concourse}}
+        gcp_terraform_subnet_concourse_gateway: {{gcp_terraform_subnet_concourse_gateway}}
         bosh_director_user: {{bosh_director_user}}
         bosh_director_password: {{bosh_director_password}}
-        bosh_subnet_static:
-        - {{bosh_subnet_static_range_1}}
-        - {{bosh_subnet_static_range_2}}
