--- a/pipeline.yml
+++ b/pipeline.yml
@@ -158,6 +158,7 @@ jobs:
         pcf_subnet_zone2_DNS:
         - {{pcf_subnet_zone2_DNS_range_1}}
         - {{pcf_subnet_zone2_DNS_range_2}}
+        stemcell_version: {{stemcell_version}}
 
 - name: Deploy-Concourse-3
   serial: true
