--- a/manifests/cloud-config.template
+++ b/manifests/cloud-config.template
@@ -12,16 +12,22 @@ vm_types:
     machine_type: n1-standard-1
     root_disk_size_gb: 30
     root_disk_type: pd-standard
+    tags:
+    - <<gcp_terraform_prefix>>-instance
 - name: cell
   cloud_properties:
     machine_type: n1-highmem-4
     root_disk_size_gb: 50
     root_disk_type: pd-standard
+    tags:
+      - <<gcp_terraform_prefix>>-instance
 - name: large
   cloud_properties:
     machine_type: n1-highcpu-4
     root_disk_size_gb: 30
     root_disk_type: pd-standard
+    tags:
+      - <<gcp_terraform_prefix>>-instance
 - name: diego_access
   cloud_properties:
     machine_type: n1-standard-1
@@ -30,6 +36,7 @@ vm_types:
     target_pool: <<gcp_terraform_prefix>>-pcf-public-ssh
     tags:
       - pcf-public-ssh
+      - <<gcp_terraform_prefix>>-instance
 - name: concourse-public
   cloud_properties:
     machine_type: n1-standard-4
@@ -38,6 +45,7 @@ vm_types:
     target_pool: <<gcp_terraform_prefix>>-concourse-public
     tags:
       - concourse-public
+      - <<gcp_terraform_prefix>>-instance
 - name: pcf-public
   cloud_properties:
     machine_type: n1-standard-4
@@ -46,7 +54,7 @@ vm_types:
     target_pool: <<gcp_terraform_prefix>>-pcf-public
     tags:
       - pcf-public
-
+      - <<gcp_terraform_prefix>>-instance
 disk_types:
 - name: small
   disk_size: 3000
