--- a/pipeline.yml
+++ b/pipeline.yml
@@ -150,7 +150,9 @@ jobs:
         - {{concourse_subnet_DNS_range_2}}
         vault_subnet_static: {{vault_subnet_static}}
         vault_subnet_reserved: {{vault_subnet_reserved}}
-        vault_subnet_DNS: {{vault_subnet_DNS}}
+        vault_subnet_DNS:
+        - {{vault_subnet_DNS_range_1}}
+        - {{vault_subnet_DNS_range_2}}
         pcf_subnet_zone1_static:
         - {{pcf_subnet_zone1_static_range_1}}
         pcf_subnet_zone1_reserved:
