--- a/manifests/bosh-init.template
+++ b/manifests/bosh-init.template
@@ -16,6 +16,7 @@ resource_pools:
       url: <<STEMCELL_URL>>
       sha1: <<STEMCELL_SHA1>>
     cloud_properties:
+      zone: <<gcp_zone_1>>
       machine_type: n1-standard-4
       root_disk_size_gb: 50
       root_disk_type: pd-standard
