--- a/pipeline-thd.yml
+++ b/pipeline-thd.yml
@@ -77,7 +77,7 @@ jobs:
     - get: pcf-gcp-concourse
       trigger: false
     - get: gcp-run-id
-      trigger: true
+      trigger: false
       passed: [WipeEnv-0]
   - task: terrafrom-iaas
     config:
