Removed thd string in favor of opsman string

--- a/pipeline-opsman.yml
+++ b/pipeline-opsman.yml
@@ -89,6 +89,7 @@ jobs:
       run:
         path: pcf-gcp-concourse/tasks/terraform-iaas.sh
       params:
+        gcp_pcf_deploy_method: {{gcp_pcf_deploy_method}}
         gcp_proj_id: {{gcp_proj_id}}
         gcp_region_1: {{gcp_region_1}}
         gcp_zone_1: {{gcp_zone_1}}
